# openapi

./: Cargo.toml  openapi.yaml
.openapi/flavours/axum/: config.yaml  router.tera
crates/apps/openapi_cli/: Cargo.toml  README.md
crates/apps/openapi_cli/src/: main.rs
crates/libs/openapi_generator/: Cargo.toml
crates/libs/openapi_kit/: Cargo.toml  README.md
crates/libs/openapi_kit/src/: lib.rs
crates/libs/openapi_kit_generator/: Cargo.toml
crates/libs/openapi_kit_generator/src/: lib.rs
crates/libs/openapi_kit_macros/: Cargo.toml
crates/libs/openapi_kit_macros/src/: generate.rs  generate_from_file.rs  lib.rs
crates/libs/openapi_kit_renderer/: Cargo.toml
crates/libs/openapi_kit_renderer/src/: error.rs  lib.rs
crates/libs/openapi_kit_schema/: Cargo.toml
crates/libs/openapi_kit_schema/src/: error.rs  lib.rs
crates/libs/openapi_kit_workspace/: Cargo.toml  README.md
crates/libs/openapi_kit_workspace/src/: config.rs  error.rs  lib.rs  workspace.rs
crates/libs/openapi_macros/: Cargo.toml  README.md
crates/libs/openapi_macros/src/: lib.rs
crates/libs/openapi_schema/: Cargo.toml  README.md
crates/libs/openapi_schema/src/: lib.rs
examples/simple/src/: main.rs
src/: config.rs  main.rs  renderer.rs  schema.rs
src/commands/: flavour.rs  language.rs  mod.rs
