[package]
name = "openapi_kit"
description = "OpenAPI Kit"
version = "0.0.3"
edition = "2024"
homepage = "https://github.com/netrune/openapi"
repository = "https://github.com/netrune/openapi"
readme = "README.md"
license = "MIT"

[dependencies]
openapi_kit_macros.workspace = true
openapi_kit_schema.workspace = true
