[package]
name = "openapi_kit_macros"
description = "OpenAPI Macros"
version = "0.0.1"
edition = "2024"
homepage = "https://github.com/netrune/openapi"
repository = "https://github.com/netrune/openapi"
readme = "README.md"
license = "MIT"

[dependencies]
openapi_kit_schema.workspace = true
handlebars.workspace = true

[lib]
proc-macro = true
