[package]
name = "openapi_kit_macros"
description = "OpenAPI Macros"
version = "0.0.2"
edition = "2024"
homepage = "https://github.com/netrune/openapi"
repository = "https://github.com/netrune/openapi"
readme = "README.md"
license = "MIT"

[dependencies]
openapi_kit_schema.workspace = true
handlebars.workspace = true

syn = { version = "2.0.98" }

[lib]
proc-macro = true
