[package]
name = "openapi_kit_schema"
description = "OpenAPI Schema"
version = "0.0.2"
edition = "2024"
homepage = "https://github.com/netrune/openapi"
repository = "https://github.com/netrune/openapi"
readme = "README.md"
license = "MIT"

[dependencies]
openapiv3.workspace = true
serde_yaml = { version = "0.9.33" }
