[package]
name = "openapi_kit_workspace"
description = "OpenAPI Workspace"
version = "0.0.3"
edition = "2024"
homepage = "https://github.com/netrune/openapi"
repository = "https://github.com/netrune/openapi"
readme = "README.md"
license = "MIT"

[dependencies]
serde.workspace = true
serde_yml.workspace = true
