[package]
name = "openapi_macros"
description = "OpenAPI Macros"
version = "0.0.1"
edition = "2024"
homepage = "github.com/netrune/openapi"
repository = "github.com/netrune/openapi"
readme = "README.md"
license = "MIT"

[dependencies]
openapi_schema.workspace = true
handlebars.workspace = true

[lib]
proc-macro = true
